alleen summary nog niet
maandag

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -13,7 +13,7 @@ Then I show that this pattern is not unique to headless relatives. It appears in
 
 As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. In this section I first discuss examples in which the internal and the external match, and then examples in which they differ.
 
-If the internal and the external case are identical, nothing special happens: the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. I give examples in which the internal and external case are respectively nominative, accusative and dative. The relative pronoun appears in the respective cases.
+If the internal and the external case are identical, the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. I give examples in which the internal and external case are respectively nominative, accusative and dative. The relative pronoun appears in the respective cases.
 
 The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
 <http://www.wulfila.be>
@@ -38,9 +38,9 @@ The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in
  `I pity him, whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
 Consider the examples in \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case.
-The internal case is accusative, as the predicate \tit{manwjan} `to prepare' takes dative indirect objects.
-The external case is accusative as well, the predicate \tit{giban} `to give' takes dative indirect objects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
+The internal case is dative, as the predicate \tit{manwjan} `to prepare' takes dative indirect objects.
+The external case is dative as well, the predicate \tit{giban} `to give' takes dative indirect objects.
+The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
 
 \exg. nist mein du giban, alja þaim -ei manwiþ was\\
 {is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
@@ -52,22 +52,22 @@ The diagonal from the top left to the bottom right corresponds to the examples g
 
 \begin{table}[H]
  \center
- \caption{Extensive summary of Gothic headless relatives}
+ \caption{Extensive summary of Gothic headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
    \toprule
-     \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+    \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
          & [\ac{nom}]
          & [\ac{acc}]
          & [\ac{dat}]
          \\ \cmidrule{1-4}
      [\ac{nom}]
-         & \ac{nom}
+         & \colorbox{LG}{\ac{nom}}
          &
          &
          \\ \cmidrule{1-4}
      [\ac{acc}]
          &
-         & \ac{acc}
+         & \colorbox{DG}{\ac{acc}}
          &
          \\ \cmidrule{1-4}
      [\ac{dat}]
@@ -91,7 +91,7 @@ This can be reformulated as follows. In a competition, accusative wins over nomi
 
 I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
+Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
 The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
 The external case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
@@ -99,9 +99,9 @@ Examples in which the internal case is accusative, the external case is nominati
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
- `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom-rep}
+ `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-acc-rep}
 
-Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the the internal nominative case competes against the external accusative case.
+Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the the internal nominative case competes against the external accusative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{ussiggwan} `to read' takes accusative objects.
 The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
@@ -109,37 +109,37 @@ Examples in which the internal case is nominative, the external case is accusati
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
- `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc-rep}
+ `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-acc-nom-rep}
 
 The two examples in which nominative and accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. Within the newly filled out cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in (light or dark) gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For non-extinct languages it means that the examples are ungrammatical.
 }
 
-The light gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in nominative case.
+The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in nominative case.
 
 \begin{table}[H]
  \center
- \caption{Extensive summary of Gothic headless relatives}
+ \caption{Extensive summary of Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
    \toprule
-     \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
          & [\ac{nom}]
          & [\ac{acc}]
          & [\ac{dat}]
          \\ \cmidrule{1-4}
      [\ac{nom}]
          & \ac{nom}
-         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{acc}}}
+         & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{acc}}}
          &
          \\ \cmidrule{1-4}
      [\ac{acc}]
-         & \diagbox[linecolor=white]{\colorbox{DG}{\ac{acc}}}{*\ac{nom}}
+         & \diagbox[linecolor=white]{\colorbox{LG}{\ac{acc}}}{*\ac{nom}}
          & \ac{acc}
-         &
+         & \diagbox[linecolor=white]{\phantom{{\tsc{xxx}}}}{\phantom{*\tsc{xxx}}}
          \\ \cmidrule{1-4}
      [\ac{dat}]
          &
-         &
+         & \diagbox[linecolor=white]{\phantom{{\tsc{xxx}}}}{\phantom{*\tsc{xxx}}}
          & \ac{dat}
          \\
    \bottomrule
@@ -149,7 +149,7 @@ The light gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the 
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-dat-nom}, in which the internal dative case competes against the external nominative case.
+Consider the example in \ref{ex:gothic-nom-dat}, in which the internal dative case competes against the external nominative case.
 The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
 The external case is nominative, as the predicate \tit{frijon} `to love' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
@@ -157,9 +157,9 @@ Examples in which the internal case is dative, the external case is nominative a
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
  but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.\scsub{[nom]}\\
- `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
+ `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-dat}
 
-Consider the example in \ref{ex:gothic-nom-dat}, in which the internal nominative case competes against the external dative case.
+Consider the example in \ref{ex:gothic-dat-nom}, in which the internal nominative case competes against the external dative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is dative, as the predicate \tit{fraþjan} `to think about' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{pl}.\ac{n}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
@@ -167,16 +167,16 @@ Examples in which the internal case is nominative, the external case is dative a
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
- `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
+ `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-nom}
 
-The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in nominative case.
+The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in nominative case.
 
  \begin{table}[H]
   \center
-  \caption{Extensive summary of Gothic headless relatives}
+  \caption{Extensive summary of Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -184,7 +184,7 @@ The two examples in which nominative and dative compete are showed in Table \ref
       [\ac{nom}]
           & \ac{nom}
           & \diagbox[linecolor=white]{*\ac{nom}}{\ac{acc}}
-          & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{LG}{\ac{dat}}}
+          & \diagbox[linecolor=white]{*\ac{nom}}{\colorbox{DG}{\ac{dat}}}
           \\ \cmidrule{1-4}
       [\ac{acc}]
           & \diagbox[linecolor=white]{\ac{acc}}{*\ac{nom}}
@@ -192,7 +192,7 @@ The two examples in which nominative and dative compete are showed in Table \ref
           &
           \\ \cmidrule{1-4}
       [\ac{dat}]
-          & \diagbox[linecolor=white]{\colorbox{DG}{\ac{dat}}}{*\ac{nom}}
+          & \diagbox[linecolor=white]{\colorbox{LG}{\ac{dat}}}{*\ac{nom}}
           &
           & \ac{dat}
           \\
@@ -230,14 +230,14 @@ Examples in which the internal case is accusative, the external case is dative a
 that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
-The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in accusative case.
+The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in accusative case.
 
  \begin{table}[H]
   \center
-  \caption{Extensive summary of Gothic headless relatives}
+  \caption{Extensive summary of Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -250,11 +250,11 @@ The two examples in which accusative and dative compete are showed in Table \ref
       [\ac{acc}]
           & \diagbox[linecolor=white]{{\ac{acc}}}{*\ac{nom}}
           & \ac{acc}
-          & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{LG}{\ac{dat}}}
+          & \diagbox[linecolor=white]{*\ac{acc}}{\colorbox{DG}{\ac{dat}}}
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \diagbox[linecolor=white]{{\ac{dat}}}{*\ac{nom}}
-          & \diagbox[linecolor=white]{\colorbox{DG}{(\ac{dat})}}{*\ac{acc}}
+          & \diagbox[linecolor=white]{\colorbox{LG}{(\ac{dat})}}{*\ac{acc}}
           & \ac{dat}
           \\
     \bottomrule
@@ -262,9 +262,12 @@ The two examples in which accusative and dative compete are showed in Table \ref
     \label{tbl:summary-gothic-acc-dat}
  \end{table}
 
-Table \ref{tbl:summary-gothic-acc-dat} can be simplified as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into two set: a set of three instances in the lower left corner and a set of three instances in the upper right corner.
-In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
-In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
+Table \ref{tbl:summary-gothic-acc-dat} can be simplified as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into three set: (1) a set of three unmarked cells in the diagonal from the top left to the bottom right, (2) a set of three light gray marked cells in the lower left corner and (3) a set of three dark gray marked cells in the upper right corner.
+
+The unmarked three cells in the diagonal are situations in which the internal and the external case match. The three cells in the lower left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the upper right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
+
+In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
+In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 
 \begin{table}[H]
   \center
