--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -582,3 +582,14 @@
   year={2015},
   publisher={Brepols Turnhout}
 }
+
+@article{grosu1987,
+  title={Pied piping and the matching parameter},
+  author={Grosu, Alexander},
+  journal={The linguistic review},
+  volume={6},
+  number={1},
+  pages={41--58},
+  year={1987},
+  publisher={Walter de Gruyter, Berlin/New York}
+}
