--- a/tables/gothic-summary.tex
+++ b/tables/gothic-summary.tex
@@ -9,17 +9,17 @@
         \\ \cmidrule{1-4}
     [\ac{nom}]
         & \ac{nom}
-        & \ac{acc}
-        & \ac{dat}
+        & \colorbox{DG}{\ac{acc}}
+        & \colorbox{DG}{\ac{dat}}
         \\ \cmidrule{1-4}
     [\ac{acc}]
+        & \colorbox{LG}{\ac{acc}}
         & \ac{acc}
-        & \ac{acc}
-        & \ac{dat}
+        & \colorbox{DG}{\ac{dat}}
         \\ \cmidrule{1-4}
     [\ac{dat}]
-        & \ac{dat}
-        & (\ac{dat})
+        & \colorbox{LG}{\ac{dat}}
+        & \colorbox{LG}{(\ac{dat})}
         & \ac{dat}
         \\
   \bottomrule
