summary ook klaar
alleen nog 4.7

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -1108,9 +1108,7 @@ In case competition in headless relatives two aspects play a role. The first one
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns-sum}
 
-The second aspect is whether the internal and the external case are allowed to surface when either of them wins the case competition. This differs across languages. There are four possible patterns. For each pattern, the same table serves as a basis. This is the one given in \ref{}
-
- (1) a pattern in which the external or the internal case are allowed to surface when either of them wins, (2) a pattern in which only the internal case is allowed to surface when it wins, (3) a pattern in which only the external case is allowed to surface when it wins, and (4) a pattern in which neither the internal nor the external case is allowed to surface.
+This gives the following table \ref{tbl:case-competition-table}.
 
 \begin{table}[H]
   \center
@@ -1140,22 +1138,24 @@ The second aspect is whether the internal and the external case are allowed to s
      \bottomrule
   \end{tabular}
     \label{tbl:case-competition-table}
+\end{table}
 
+The second aspect is whether the internal and the external case are allowed to surface when either of them wins the case competition. This differs across languages. There are four possibilities: (1) the internal and the external case are allowed to surface when either of them wins, (2) only the internal case is allowed to surface when it wins, (3) only the external case is allowed to surface when it wins, and (4) neither the internal nor the external case is allowed to surface.
 
 Gothic, Old High German and Classical Greek are examples of languages of the first type. Modern German is an example of a language of the second type. Polish is an example of a language of the fourth type. To my knowledge, the third pattern is not attested. A summary of the patterns and languages is given in Table \ref{tbl:possible-headless-relatives-case-competition}.
 
-\ac{ext}, \ac{int}
+Table \ref{tbl:possible-headless-relatives-case-competition} gives an overview of the patterns and whether they are attested. The top row sketches two different situations: one in which the internal case is the most complex ([\ac{int}]>[\ac{ext}]) and one in which the external case is the most complex ([\ac{ext}]>[\ac{int}]). The second row refers to the case in which the relative pronoun appears, which can be either the internal case (\ac{int}) or the external case (\ac{ext}).
 
 \begin{table}[H]
   \center
   \caption{Possible patterns in headless relatives with case competition}
     \begin{tabular}{cc|ccc}
     \toprule
-    \multicolumn{2}{c}{\ac{int}>\ac{ext}}   & \multicolumn{2}{|c}{\ac{ext}>\ac{int}} &                                           \\
+    \multicolumn{2}{c}{[\ac{int}]>[\ac{ext}]}   & \multicolumn{2}{|c}{[\ac{ext}]>[\ac{int}]} &                                           \\
     \cmidrule(lr){1-2}                      \cmidrule(lr){3-4}
     \ac{int}            & \ac{ext}          & \ac{int}          & \ac{ext}            & language                                  \\
     \cmidrule(lr){1-1}  \cmidrule(lr){2-2}  \cmidrule(lr){3-3}  \cmidrule(lr){4-4}    \cmidrule(lr){5-5}
-    ✔                   & *                 & *                 & ✔                   & Old High German                           \\
+    ✔                   & *                 & *                 & ✔                   & e.g. Old High German                           \\
     ✔                   & *                 & *                 & *                   & Modern German                             \\
     {*}                 & *                 & *                 & ✔                   & n.a.                                      \\
     {*}                 & *                 & *                 & *                   & Polish                                    \\
@@ -1163,6 +1163,26 @@ Gothic, Old High German and Classical Greek are examples of languages of the fir
   \end{tabular}
     \label{tbl:possible-headless-relatives-case-competition}
 \end{table}
+
+The row numbered as 1 in Table \ref{tbl:possible-headless-relatives-case-competition} corresponds to the first pattern, in which the relative pronoun is allowed to surface in the internal and the external case, when either of them wins the case competition.
+The most left checkmark indicates that the internal case is allowed to surface in the internal case when the internal case is the most complex. This corresponds to the light gray marked cells in Table \ref{tbl:case-competition-table}.
+The most right checkmark indicates that the external case is allowed to surface in the external case when the external case is the most complex. This corresponds to the dark gray marked cells in Table \ref{tbl:case-competition-table}.
+In sum, all cells in Table \ref{tbl:case-competition-table} are grammatical.
+
+The row numbered as 2 in Table \ref{tbl:possible-headless-relatives-case-competition} corresponds to the second pattern, in which the relative pronoun is only allowed to surface in the internal case, when it wins the case competition.
+The checkmark indicates that the internal case is allowed to surface in the internal case when the internal case is the most complex. This corresponds to the light gray marked cells in Table \ref{tbl:case-competition-table}.
+There is no checkmark in columns that correspond to the situation in which the external case wins the case competition, meaning that there is no grammatical result possible. This means that the dark gray marked cells in Table \ref{tbl:case-competition-table} are ungrammatical in this pattern.
+In sum, the diagonal and the light gray marked cells in Table \ref{tbl:case-competition-table} are grammatical, the dark gray marked ones are not.
+
+The row numbered as 3 in Table \ref{tbl:possible-headless-relatives-case-competition} corresponds to the third pattern, in which the relative pronoun is only allowed to surface in the external case, when it wins the case competition.
+The checkmark indicates that the external case is allowed to surface in the external case when the external case is the most complex. This corresponds to the dark gray marked cells in Table \ref{tbl:case-competition-table}.
+There is no checkmark in columns that correspond to the situation in which the internal case wins the case competition, meaning that there is no grammatical result possible. This means that the light gray marked cells in Table \ref{tbl:case-competition-table} are ungrammatical in this pattern.
+In sum, the diagonal and the dark gray marked cells in Table \ref{tbl:case-competition-table} are grammatical, the light gray marked ones are not.
+
+The row numbered as 4 in Table \ref{tbl:possible-headless-relatives-case-competition} corresponds to the third pattern, in which the relative pronoun is neither allowed to surface in the internal case nor in the external case.
+There is no checkmark for this pattern, meaning that there is no grammatical result possible when the internal case is more complex than the external case or the other way around (i.e. when the internal case and the external case differ). This means that the light gray marked cells and the dark gray marked cells in Table \ref{tbl:case-competition-table} are ungrammatical in this pattern.
+In sum, only the cells in the diagonal are grammatical.
+
 
 It is impossible to prove that this pattern does not exist (or has not existed) in any natural language, and it could be an accidental gap. However, in line with the available data so far, I set up a system in the next section that derives the three attested patterns, and excludes the fourth one.
 
